# 10_000_000_linhas_pandas_x_pyspark_pandas

./: .gitignore  README.md  app.py  etl-duckdb.py  etl-pandas-json.py  etl-pyspark-pandas-json.py  pyproject.toml  um_milhao_linhas.py
